--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -558,18 +558,13 @@
 
 
 
-    <script src="~/libs/select2/js/select2.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.select2').select2();
-        });
-    </script>
+
 
 
 
 
     <!-- Chart js -->
-    <script type="text/javascript" src="~/admin/files/bower_components/chart.js/dist/Chart.js"></script>
+    @*<script type="text/javascript" src="~/admin/files/bower_components/chart.js/dist/Chart.js"></script>*@
     <!-- amchart js -->
     <script src="~/admin/files/assets/pages/widget/amchart/amcharts.js"></script>
     <script src="~/admin/files/assets/pages/widget/amchart/serial.js"></script>
@@ -581,6 +576,12 @@
     <!-- custom js -->
     <script src="~/admin/files/assets/js/vartical-layout.min.js"></script>
     <script type="text/javascript" src="~/admin/files/assets/js/script.min.js"></script>
+    <script src="~/libs/select2/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.select2').select2();
+        });
+    </script>
     <script src="~/admin/files/assets/js/customize.js"></script>
 </body>
 
