--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -3,3 +3,5 @@
 @using Auto_Part_WebUI.Models.Entities.Membership
 @using Auto_Part_WebUI.Models.Entities
 @using Auto_Part_WebUI.Models.ViewModels
+@using System.Globalization
+
