--- a/Auto-Part/Auto-Part-WebUI/Views/Account/Profile.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Account/Profile.cshtml
@@ -37,7 +37,7 @@
                         <p class="mb-8">
                             Siz bu səhifədə sifarişlərinizə baxa bilərsiniz <a href="#orders" class="link-to-tab text-primary">Sifarişlər</a>, Profilinizəki məlumatlarda <br>
                             dəyişiklik edə bilərsiniz
-                           
+
                         </p>
                         <a asp-action="index" asp-controller="shop" class="btn btn-dark btn-rounded">Sayta Keçid<i class="d-icon-arrow-right"></i></a>
                     </div>
@@ -49,33 +49,38 @@
                                     <th>Tarix</th>
                                     <th>Status</th>
                                     <th>Ümumi Məbləğ</th>
+                                    <th></th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="myTable">
                                 @foreach (var item in Model.Order)
                                 {
                                     <tr>
                                         <td class="order-number"><a href="#">#@item.Id</a></td>
-                                        <td class="order-date"><time>@item.CreatedDate.ToString("MMMM dd, yyyy")</time></td>
+                                        <td class="order-date"><time>@item.CreatedDate.ToString("d MMMM, yyyy HH:mm", CultureInfo.GetCultureInfo("az-Az"))</time></td>
                                         <td class="order-status">
                                             @if (item.isConfirmed)
                                             {
-                                                <span>Təsdiqlənib</span>
+                                                <span style="background-color:green;color:white;">Təsdiqlənib</span>
                                             }
                                             else if (item.DeletedById != null)
                                             {
-                                                <span>Ləğv olunub</span>
+                                                <span style="background-color:red;color:white;">Ləğv olunub</span>
                                             }
                                             else
                                             {
-                                                <span>Gözləmədə</span>
+                                                <span style="background-color:orange;color:white;">Gözləmədə</span>
                                             }
                                         </td>
-                                        <td class="order-total"><span>@item.TotalAmount ₼ for @item.OrderItems.Where(oi => oi.OrderId == item.Id).Count() items</span></td>
+                                        <td class="order-total"><span>@item.OrderItems.Where(oi => oi.OrderId == item.Id).Count() məhsul üçün @item.TotalAmount ₼</span></td>
+                                        <td class="order-action"><a asp-route-id="@item.Id" asp-action="Order" style="text-decoration:none;" class="btn btn-primary btn-link btn-underline">Detallı</a></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
+                        <div class="col-md-12 text-center">
+                            <ul class="pagination pagination-lg pager" id="myPager"></ul>
+                        </div>
                     </div>
                     <div class="tab-pane" id="downloads">
                         <p class="mb-4 text-body">No downloads available yet.</p>
@@ -144,6 +149,8 @@
     </div>
 </main>
 @section css{
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
         a.active {
             color: #26c !important;
@@ -151,6 +158,150 @@
     </style>
 }
 @section js{
+    <script>
+        $.fn.pageMe = function (opts) {
+            var $this = this,
+                defaults = {
+                    perPage: 7,
+                    showPrevNext: false,
+                    hidePageNumbers: false
+                },
+                settings = $.extend(defaults, opts);
+
+            var listElement = $this;
+            var perPage = settings.perPage;
+            var children = listElement.children();
+            var pager = $('.pager');
+
+            if (typeof settings.childSelector != "undefined") {
+                children = listElement.find(settings.childSelector);
+            }
+
+            if (typeof settings.pagerSelector != "undefined") {
+                pager = $(settings.pagerSelector);
+            }
+
+            var numItems = children.length;
+
+            var numPages = Math.ceil(numItems / perPage);
+
+            pager.data("curr", 0);
+
+            if (settings.showPrevNext) {
+                $('<li><a href="#" class="prev_link">«</a></li>').appendTo(pager);
+            }
+
+            var curr = 0;
+            // Added class and id in li start
+            while (numPages > curr && (settings.hidePageNumbers == false)) {
+                $('<li id="pg' + (curr + 1) + '" class="pg"><a href="#" class="page_link">' + (curr + 1) + '</a></li>').appendTo(pager);
+                curr++;
+            }
+            // Added class and id in li end
+
+            if (settings.showPrevNext) {
+                $('<li><a href="#" class="next_link">»</a></li>').appendTo(pager);
+            }
+
+            pager.find('.page_link:first').addClass('active');
+            pager.find('.prev_link').hide();
+            if (numPages <= 1) {
+                pager.find('.next_link').hide();
+            }
+            pager.children().eq(1).addClass("active");
+
+            children.hide();
+            children.slice(0, perPage).show();
+            if (numPages > 3) {
+                $('.pg').hide();
+                $('#pg1,#pg2,#pg3').show();
+                $("#pg3").after($("<li class='ell'>").html("<span>...</span>"));
+            }
+
+            pager.find('li .page_link').click(function () {
+                var clickedPage = $(this).html().valueOf() - 1;
+                goTo(clickedPage, perPage);
+                return false;
+            });
+            pager.find('li .prev_link').click(function () {
+                previous();
+                return false;
+            });
+            pager.find('li .next_link').click(function () {
+                next();
+                return false;
+            });
+
+            function previous() {
+                var goToPage = parseInt(pager.data("curr")) - 1;
+                goTo(goToPage);
+            }
+
+            function next() {
+                goToPage = parseInt(pager.data("curr")) + 1;
+                goTo(goToPage);
+            }
+
+            function goTo(page) {
+                var startAt = page * perPage,
+                    endOn = startAt + perPage;
+
+                // Added few lines from here start
+
+                $('.pg').hide();
+                $(".ell").remove();
+                var prevpg = $("#pg" + page).show();
+                var currpg = $("#pg" + (page + 1)).show();
+                var nextpg = $("#pg" + (page + 2)).show();
+                if (prevpg.length == 0) nextpg = $("#pg" + (page + 3)).show();
+                if (prevpg.length == 1 && nextpg.length == 0) {
+                    prevpg = $("#pg" + (page - 1)).show();
+                }
+                $("#pg1").show()
+                if (curr > 3) {
+                    if (page > 1) prevpg.before($("<li class='ell'>").html("<span>...</span>"));
+                    if (page < curr - 2) nextpg.after($("<li class='ell'>").html("<span>...</span>"));
+                }
+
+                if (page <= numPages - 3) {
+                    $("#pg" + numPages.toString()).show();
+                }
+                currpg.addClass("active").siblings().removeClass("active");
+                // Added few lines till here end
+
+
+                children.css('display', 'none').slice(startAt, endOn).show();
+
+                if (page >= 1) {
+                    pager.find('.prev_link').show();
+                } else {
+                    pager.find('.prev_link').hide();
+                }
+
+                if (page < (numPages - 1)) {
+                    pager.find('.next_link').show();
+                } else {
+                    pager.find('.next_link').hide();
+                }
+
+                pager.data("curr", page);
+                pager.children().removeClass("active");
+                pager.children().eq(page + 1).addClass("active");
+
+            }
+        };
+
+        $(document).ready(function () {
+
+            $('#myTable').pageMe({
+                pagerSelector: '#myPager',
+                showPrevNext: true,
+                hidePageNumbers: false,
+                perPage: 5
+            });
+
+        });
+    </script>
     <script>
         function tabOrder(e) {
             let tabPanes = document.querySelectorAll('.tab-pane');
