--- a/Auto-Part/Auto-Part-WebUI/Views/Shared/Components/MobileMenu/Default.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shared/Components/MobileMenu/Default.cshtml
@@ -4,7 +4,7 @@
     <a class="mobile-menu-close" href="#"><i class="d-icon-times"></i></a>
     <div class="mobile-menu-container scrollable">
         <form method="get" asp-controller="Shop" asp-action="Search" class="input-wrapper">
-            <input type="text" class="form-control" id="search" name="query" placeholder="Axtardığınız məhsulun kodunu daxil edin ..." autocomplete="off"
+            <input type="text" class="form-control" id="search" name="query" placeholder="Məhsulun kodunu daxil edin ..." autocomplete="off"
                    required />
             <button class="btn btn-search" type="submit">
                 <i class="d-icon-search"></i>
