--- a/Auto-Part/Auto-Part-WebUI/Views/_ViewImports.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Auto_Part_WebUI.Models.Entities
 @using Auto_Part_WebUI.Models.ViewModels;
-@using Auto_Part_WebUI.AppCode.Extensions 
-@using Auto_Part_WebUI.Models.FormModels 
+@using Auto_Part_WebUI.AppCode.Extensions
+@using Auto_Part_WebUI.Models.FormModels
 @using Auto_Part_WebUI.Models.Entities.Membership
+@using System.Globalization;
