--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Brands/Create.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Brands/Create.cshtml
@@ -34,10 +34,10 @@
     <div class="card p-3">
         <div class="card-block">
             <form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
+                    <input required asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
