--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Orders/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Orders/Details.cshtml
@@ -66,7 +66,7 @@
                 <div class="form-group row">
                     <label asp-for="Order.CreatedDate" class="col-sm-2 col-form-label"></label>
                     <div class="col-sm-10">
-                        <p class="form-control">@Model.Order.CreatedDate.ToString("MMMM MM, yyyy  HH:mm:ss")</p>
+                        <p class="form-control">@Model.Order.CreatedDate.ToString("MMMM MM, yyyy  HH:mm:ss", CultureInfo.GetCultureInfo("az-Az"))</p>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -91,7 +91,13 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label asp-for="@product.PartCodeName" class="col-sm-2 col-form-label"></label>
+                                <label asp-for="@product.MainPartCodeName" class="col-sm-2 col-form-label">Əsas kod</label>
+                                <div class="col-sm-10">
+                                    <p class="form-control">@product.MainPartCodeName</p>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-sm-2 col-form-label">Alternativ kod</label>
                                 <div class="col-sm-10">
                                     <p class="form-control">@product.PartCodeName</p>
                                 </div>
