--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductTypes/Create.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/ProductTypes/Create.cshtml
@@ -37,7 +37,7 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
+                    <input required asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
