--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Details.cshtml
@@ -65,7 +65,13 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label asp-for="PartCodeName" class="col-sm-2 col-form-label"></label>
+                    <label asp-for="MainPartCodeName" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.MainPartCodeName</p>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Alternativ Kodlar</label>
                     <div class="col-sm-10">
                         <p class="form-control">@Model.PartCodeName</p>
                     </div>
