--- a/Auto-Part/Auto-Part-WebUI/Views/Account/SignIn.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Account/SignIn.cshtml
@@ -30,7 +30,14 @@
                         <div class="tab-content">
                             <div class="tab-pane active" id="signin">
                                 <form method="post">
-                                    <div asp-validation-summary="All"></div>
+                                    @if (!Html.ViewData.ModelState.IsValid)
+                                    {
+                                        <div class="form-group mb-3">
+                                            <div asp-validation-summary="All" class="alert alert-danger text-white">
+                                            </div>
+                                        </div>
+                                    }
+
                                     @if (!string.IsNullOrWhiteSpace(ViewBag.Message))
                                     {
                                         <div class="form-group mb-3">
@@ -41,19 +48,11 @@
                                     }
                                     <div class="form-group mb-3">
                                         <input class="form-control" asp-for="UserName" placeholder="E-Poçt və ya İstifadəçi Adı *" />
+                                        <span asp-validation-for="UserName" class="text-danger"></span>
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" asp-for="Password" placeholder="Şifrə *" />
-                                    </div>
-                                    <div class="form-footer">
-                                        <div class="form-checkbox">
-                                            <input type="checkbox" class="custom-checkbox" id="signin-remember"
-                                                   name="signin-remember" />
-                                            <label class="form-control-label" for="signin-remember">
-                                                Məni Yadda saxla
-                                            </label>
-                                        </div>
-                                        <a href="#" class="lost-link">Şifrəni unutmusunuz?</a>
+                                        <span asp-validation-for="Password" class="text-danger"></span>
                                     </div>
                                     <button class="btn btn-dark btn-block btn-rounded" type="submit">Giriş</button>
                                 </form>
