--- a/Auto-Part/Auto-Part-WebUI/Views/Home/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                 }">
         <div class="intro-slide1 banner banner-fixed" style="background-color: #f0f0f0">
             <figure>
-                <img src="~/assets/images/bannnnner.jpg" alt="banner" width="1503" height="369" !important />
+                <img src="~/assets/images/bannnnner.jpg" style="object-fit:contain" alt="banner" width="1503" height="369" !important />
             </figure>
             <div class="container">
                 <div class="banner-content ml-lg-2 y-50">
@@ -32,17 +32,17 @@
         </div>
         <div class="intro-slide2 banner banner-fixed" style="background-color: #ececf3">
             <figure>
-                <img src="~/assets/images/bannerr.jpg" alt="banner" width="1903" height="469" />
+                <img src="~/assets/images/bannerr.jpg" style="object-fit:contain" alt="banner" width="1903" height="469" />
             </figure>
             <div class="container">
-                <div class="banner-content ml-auto y-50 mr-0">
+                <div class="banner-content ml-lg-2 y-50">
                     <div class="slide-animate"
                          data-animation-options="{'name': 'blurIn', 'duration': '.8s'}">
-                        @*<h4 class="banner-subtitle text-uppercase text-primary">Professional</h4>
-                        <h3 class="banner-title ls-s font-weight-bold">
-                            Pulseira Inteligente <br />Smart Band
-                            5
-                        </h3>*@
+                        <h4 style="color: #d23332" class="banner-subtitle text-uppercase">Onlayn Alış-Veriş</h4>
+                        <h3 style="color:white" class="banner-title ls-m text-dark font-weight-bolder">
+                            <span class="font-weight-bold text-primary ls-s">EcoParts Onlayn Market</span><br />
+                            <br />
+                        </h3>
                         <a asp-action="index" asp-controller="shop" class="btn btn-dark btn-outline btn-rounded mb-1">
                             Məhsullara keçid<i class="d-icon-arrow-right"></i>
                         </a>
@@ -59,22 +59,51 @@
             </a>
         </h2>
         <div class="product-grid row gutter-sm">
-            <div class="height-x2">
-                <div class="banner banner-fixed">
-                    <figure>
-                        <img src="~/assets/images/deposit.jpg" alt="banner" width="340" height="593" />
+            <div class="height-x1 appear-animate">
+                <div class="product text-center">
+                    <figure class="product-media">
+                        <a href="#">
+                            <img src="~/assets/images/yanacaqnasosu.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
+                        </a>
                     </figure>
-                    <div class="banner-content appear-animate" data-animation-options="{
-                                    'name': 'fadeInDownShorter'
-                                }">
-                        @*<h4 class="banner-subtitle ls-m text-uppercase">
-                            Winter
-                            season's
-                        </h4>
-                        <h3 class="banner-title ls-s font-weight-bold">Discover Our Ski<br />Equipments</h3>
-                        <a href="~/assets/demo23-shop.html" class="btn btn-white btn-shadow-sm">
-                            Shop now <i class="d-icon-arrow-right"></i>
-                        </a>*@
+                    <div class="product-details">
+                        <h3 class="product-name">
+                            <a href="#">Yanacaq Nasosu</a>
+                        </h3>
+                        <div class="product-price">
+                            <span class="price"></span>
+                        </div>
+                        <div class="ratings-container">
+                            <div class="ratings-full">
+                                <span class="ratings" style="width:100%"></span>
+                                <span class="tooltiptext tooltip-top"></span>
+                            </div>
+                            <a href="#" class="rating-reviews">( 44 )</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="height-x1 appear-animate">
+                <div class="product text-center">
+                    <figure class="product-media">
+                        <a href="#">
+                            <img src="~/assets/images/yagfilteri.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
+                        </a>
+                    </figure>
+                    <div class="product-details">
+                        <h3 class="product-name">
+                            <a href="#">Yağ Filteri</a>
+                        </h3>
+                        <div class="product-price">
+                            <span class="price"></span>
+                        </div>
+                        <div class="ratings-container">
+                            <div class="ratings-full">
+                                <span class="ratings" style="width:100%"></span>
+                                <span class="tooltiptext tooltip-top"></span>
+                            </div>
+                            <a href="#" class="rating-reviews">( 44 )</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -84,18 +113,6 @@
                         <a href="#">
                             <img src="~/assets/images/babin.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
                         </a>
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-cart" data-toggle="modal"
-                               data-target="#addCartModal" title="Add to cart">
-                                <i class="d-icon-bag"></i>
-                            </a>
-                            <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist">
-                                <i class="d-icon-heart"></i>
-                            </a>
-                        </div>
-                        <div class="product-action">
-                            <a href="~/assets/#" class="btn-product btn-quickview" title="Quick View">Görüntülə</a>
-                        </div>
                     </figure>
                     <div class="product-details">
                         <h3 class="product-name">
@@ -120,18 +137,6 @@
                         <a href="#">
                             <img src="~/assets/images/sveca.jpg" alt="product" style="width:234px !important ; height:259px !important; object-fit:contain; ">
                         </a>
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-cart" data-toggle="modal"
-                               data-target="#addCartModal" title="Səbətə Əlavə Edin">
-                                <i class="d-icon-bag"></i>
-                            </a>
-                            <a href="#" class="btn-product-icon btn-wishlist" title="İstəklərə Əlavə Edin">
-                                <i class="d-icon-heart"></i>
-                            </a>
-                        </div>
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-quickview" title="Quick View">Görüntülə</a>
-                        </div>
                     </figure>
                     <div class="product-details">
                         <h3 class="product-name">
@@ -145,7 +150,7 @@
                                 <span class="ratings" style="width:100%"></span>
                                 <span class="tooltiptext tooltip-top"></span>
                             </div>
-                            <a href="~/assets/demo23-product.html" class="rating-reviews">( 75 )</a>
+                            <a href="" class="rating-reviews">( 75 )</a>
                         </div>
                     </div>
                 </div>
@@ -157,22 +162,10 @@
                             <img src="~/assets/images/linq.jpg" alt="product" width="234"
                                  height="259" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
                         </a>
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-cart" data-toggle="modal"
-                               data-target="#addCartModal" title="Karta Əlavə Edin">
-                                <i class="d-icon-bag"></i>
-                            </a>
-                            <a href="#" class="btn-product-icon btn-wishlist" title="İstəklərə əlavə edin">
-                                <i class="d-icon-heart"></i>
-                            </a>
-                        </div>
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-quickview" title="Quick View">Görüntülə</a>
-                        </div>
                     </figure>
                     <div class="product-details">
                         <h3 class="product-name">
-                            <a href="~/assets/demo23-product.html">Linqlər</a>
+                            <a href="#">Linqlər</a>
                         </h3>
                         <div class="product-price">
                             <span class="price"></span>
@@ -191,20 +184,8 @@
                 <div class="product text-center">
                     <figure class="product-media">
                         <a href="#">
-                            <img src="~/assets/images/frfrf.jpg" alt="product" style="width:234px !important ; height:259px !important; object-fit:contain;" >
+                            <img src="~/assets/images/frfrf.jpg" alt="product" style="width:234px !important ; height:259px !important; object-fit:contain;">
                         </a>
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-cart" data-toggle="modal"
-                               data-target="#addCartModal" title="Səbətə Əlavə Et">
-                                <i class="d-icon-bag"></i>
-                            </a>
-                            <a href="#" class="btn-product-icon btn-wishlist" title="İstəklərə Əlavə Et">
-                                <i class="d-icon-heart"></i>
-                            </a>
-                        </div>
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-quickview" title="Quick View">Görüntülə</a>
-                        </div>
                     </figure>
                     <div class="product-details">
                         <h3 class="product-name">
@@ -229,22 +210,10 @@
                         <a href="#">
                             <img src="~/assets/images/salnik.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
                         </a>
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-cart" data-toggle="modal"
-                               data-target="#addCartModal" title="Səbətə Əlavə Edin">
-                                <i class="d-icon-bag"></i>
-                            </a>
-                            <a href="#" class="btn-product-icon btn-wishlist" title="İstəklərə Əlavə Edin">
-                                <i class="d-icon-heart"></i>
-                            </a>
-                        </div>
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-quickview" title="Quick View">Görüntülə</a>
-                        </div>
                     </figure>
                     <div class="product-details">
                         <h3 class="product-name">
-                            <a href="~/assets/demo23-product.html">Salniklər</a>
+                            <a href="#">Salniklər</a>
                         </h3>
                         <div class="product-price">
                             <span class="price"></span>
@@ -265,22 +234,10 @@
                         <a href="#">
                             <img src="~/assets/images/almaa.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
                         </a>
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-cart" data-toggle="modal"
-                               data-target="#addCartModal" title="Səbətə Əlavə Edin">
-                                <i class="d-icon-bag"></i>
-                            </a>
-                            <a href="#" class="btn-product-icon btn-wishlist" title="İstəklərə Əlavə Edin">
-                                <i class="d-icon-heart"></i>
-                            </a>
-                        </div>
-                        <div class="product-action">
-                            <a href="~/assets/#" class="btn-product btn-quickview" title="Quick View">Görüntülə</a>
-                        </div>
                     </figure>
                     <div class="product-details">
                         <h3 class="product-name">
-                            <a href="~/assets/demo23-product.html">Almacıq</a>
+                            <a href="#">Almacıq</a>
                         </h3>
                         <div class="product-price">
                             <span class="price"></span>
@@ -290,7 +247,7 @@
                                 <span class="ratings" style="width:100%"></span>
                                 <span class="tooltiptext tooltip-top"></span>
                             </div>
-                            <a href="~/assets/demo23-product.html" class="rating-reviews">( 122 )</a>
+                            <a href="#" class="rating-reviews">( 122 )</a>
                         </div>
                     </div>
                 </div>
@@ -299,24 +256,12 @@
                 <div class="product text-center">
                     <figure class="product-media">
                         <a href="#">
-                            <img src="~/assets/images/demos/demo23/products/12.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
+                            <img src="~/assets/images/amortizator.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
                         </a>
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-cart" data-toggle="modal"
-                               data-target="#addCartModal" title="Səbətə Əlavə Edin">
-                                <i class="d-icon-bag"></i>
-                            </a>
-                            <a href="#" class="btn-product-icon btn-wishlist" title="İstəklərə Əlavə Edin">
-                                <i class="d-icon-heart"></i>
-                            </a>
-                        </div>
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-quickview" title="Quick View">Görüntülə</a>
-                        </div>
                     </figure>
                     <div class="product-details">
                         <h3 class="product-name">
-                            <a href="~/assets/demo23-product.html">Ski shoes</a>
+                            <a href="#">Amortizator</a>
                         </h3>
                         <div class="product-price">
                             <span class="price"></span>
@@ -335,24 +280,12 @@
                 <div class="product text-center">
                     <figure class="product-media">
                         <a href="#">
-                            <img src="~/assets/images/demos/demo23/products/13.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
+                            <img src="~/assets/images/motorremeni.jpg" alt="product" style="width: 234px !important; height: 259px !important; object-fit: contain; ">
                         </a>
-                        <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-cart" data-toggle="modal"
-                               data-target="#addCartModal" title="Add to cart">
-                                <i class="d-icon-bag"></i>
-                            </a>
-                            <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist">
-                                <i class="d-icon-heart"></i>
-                            </a>
-                        </div>
-                        <div class="product-action">
-                            <a href="#" class="btn-product btn-quickview" title="Quick View">Görüntülə</a>
-                        </div>
                     </figure>
                     <div class="product-details">
                         <h3 class="product-name">
-                            <a href="#">Perfect trainer</a>
+                            <a href="#">Motor Remeni</a>
                         </h3>
                         <div class="product-price">
                             <span class="price"></span>
