--- a/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
@@ -9,10 +9,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <title>Riode - Ultimate eCommerce Template</title>
+    <title>EcoParts - avto ehtiyyat hissələri</title>
 
     <meta name="keywords" content="HTML5 Template" />
-    <meta name="description" content="Riode - eCommerce Template">
+    <meta name="description" content="EcoParts - onlayn mağaza">
     <meta name="author" content="D-THEMES">
 
     <link rel="icon" type="image/png" href="~/assets/images/icons/favicon.png">
@@ -37,7 +37,7 @@
     <!-- Plugins CSS File -->
     <link rel="stylesheet" type="text/css" href="~/assets/vendor/magnific-popup/magnific-popup.min.css">
     <link rel="stylesheet" type="text/css" href="~/assets/vendor/owl-carousel/owl.carousel.min.css">
-    <link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />
+    <link href="~/libs/toastr.js/toastr.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/libs/tab-control/tab-control.css">
     <!-- Main CSS File -->
     @RenderSection("css", required: false)
@@ -58,13 +58,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer-top">
-                    <div class="row align-items-center">
-                        <div class="col-lg-3">
-                            <a asp-action="index" asp-controller="home" class="logo-footer">
-                                <img src="~/assets/images/demos/demo23/logo-footer.png" alt="logo-footer" width="154"
-                                     height="43" />
-                            </a>
-                        </div>
+                    <div class="row justify-content-center align-items-center">
                         <div class="col-lg-9">
                             <div class="widget widget-newsletter form-wrapper form-wrapper-inline">
                                 <div class="newsletter-info mx-auto mr-lg-2 ml-lg-4">
@@ -83,28 +77,24 @@
                     </div>
                 </div>
                 <div class="footer-middle">
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div class="col-lg-3 col-md-6">
                             <div class="widget widget-info">
                                 <h4 class="widget-title">Bizimlə əlaqə</h4>
                                 <ul class="widget-body">
                                     <li>
                                         <label>Əlaqə Nömrəsi:</label>
-                                        <a href="~/assets/tel:#">+994507779990</a>
+                                        <a href="tel:+994507779990">+994507779990</a>
                                     </li>
                                     <li>
-                                        <label>Email:</label>
-                                        <a href="~/assets/mailto:mail@riode.com">testmail@mail.com</a>
-                                    </li>
-                                    <li>
-                                        <label>Address:</label>
-                                        <a href="~/assets/#">Bakı,Azərbaycan </a>
+                                        <label>Ünvan:</label>
+                                        <a href="#">Bakı,Azərbaycan </a>
                                     </li>
                                     <li>
                                         <label>İş saatları:</label>
                                     </li>
                                     <li>
-                                        <a href="~/assets/#">Bazar Ertəsi - Şənbə / 9:00 - 18:00</a>
+                                        <a href="#">Bazar Ertəsi - Şənbə / 9:00 - 18:00</a>
                                     </li>
                                 </ul>
                             </div>
@@ -117,13 +107,13 @@
                                         <a asp-action="about" asp-controller="home">Haqqımızda</a>
                                     </li>
                                     <li>
-                                        <a href="~/assets/#">Sifariş tarixçəsi</a>
+                                        <a href="#">Sifariş tarixçəsi</a>
                                     </li>
                                     <li>
-                                        <a href="~/assets/#">Geri Qaytarılmalar</a>
+                                        <a href="#">Geri Qaytarılmalar</a>
                                     </li>
                                     <li>
-                                        <a href="~/assets/#">Müştəri məmnuniyyəti</a>
+                                        <a href="#">Müştəri məmnuniyyəti</a>
                                     </li>
                                     
                                 </ul>
@@ -140,44 +130,13 @@
                                         <a asp-action="Basket" asp-controller="shop">Səbət</a>
                                     </li>
                                     <li>
-                                        <a asp-action="wishlist" asp-controller="shop" >Istəklər</a>
+                                        <a asp-action="wishlist" asp-controller="shop" >Seçilmişlər</a>
                                     </li> 
                                   
                                     <li>
                                         <a href="#">Kömək Lazımdır?</a>
                                     </li>
                                 </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="widget widget-instagram">
-                                <h4 class="widget-title">Instagram</h4>
-                                <figure class="widget-body row">
-                                    <div class="col-3">
-                                        <img src="~/assets/images/instagram/01.jpg" alt="instagram 1" width="64" height="64" />
-                                    </div>
-                                    <div class="col-3">
-                                        <img src="~/assets/images/instagram/02.jpg" alt="instagram 2" width="64" height="64" />
-                                    </div>
-                                    <div class="col-3">
-                                        <img src="~/assets/images/instagram/03.jpg" alt="instagram 3" width="64" height="64" />
-                                    </div>
-                                    <div class="col-3">
-                                        <img src="~/assets/images/instagram/04.jpg" alt="instagram 4" width="64" height="64" />
-                                    </div>
-                                    <div class="col-3">
-                                        <img src="~/assets/images/instagram/05.jpg" alt="instagram 5" width="64" height="64" />
-                                    </div>
-                                    <div class="col-3">
-                                        <img src="~/assets/images/instagram/06.jpg" alt="instagram 6" width="64" height="64" />
-                                    </div>
-                                    <div class="col-3">
-                                        <img src="~/assets/images/instagram/07.jpg" alt="instagram 7" width="64" height="64" />
-                                    </div>
-                                    <div class="col-3">
-                                        <img src="~/assets/images/instagram/08.jpg" alt="instagram 8" width="64" height="64" />
-                                    </div>
-                                </figure>
                             </div>
                         </div>
                     </div>
@@ -191,13 +150,6 @@
                     <div class="footer-center">
                         <p class="copyright">EcoParts eCommerce &copy; 2022. Bütun hüquqlar qorunur</p>
                     </div>
-                    <div class="footer-right">
-                        <div class="social-links">
-                            <a href="~/assets/#" class="social-link social-facebook fab fa-facebook-f"></a>
-                            <a href="~/assets/#" class="social-link social-twitter fab fa-twitter"></a>
-                            <a href="~/assets/#" class="social-link social-linkedin fab fa-linkedin-in"></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </footer>
@@ -209,11 +161,11 @@
         </a>
         <a asp-action="Index" asp-controller="Shop" class="sticky-link">
             <i class="d-icon-volume"></i>
-            <span>Bütün Məhsullar</span>
+            <span>Məhsullar</span>
         </a>
         <a asp-controller="Shop" asp-action="Wishlist" class="sticky-link">
             <i class="d-icon-heart"></i>
-            <span>İstəklər</span>
+            <span>Seçilmişlər</span>
         </a>
         <a asp-controller="account" asp-action="profile" class="sticky-link">
             <i class="d-icon-user"></i>
@@ -225,7 +177,7 @@
                 <span>Axtar...</span>
             </a>
             <form method="get" asp-controller="Shop" asp-action="Search" class="input-wrapper">
-                <input type="text" class="form-control" id="search" name="query" placeholder="Axtardığınız məhsulun kodunu daxil edin ..." autocomplete="off"
+                <input type="text" class="form-control" id="search" name="query" placeholder="Məhsulun kodunu yazın" autocomplete="off"
                        required />
                 <button class="btn btn-search" type="submit">
                     <i class="d-icon-search"></i>
@@ -260,11 +212,14 @@
             }
             showCardCount();
             function showCartPrice() {
-                let items = ($.cookie('prices') || '').split(',');
-                console.log(items);
+
+                let prices = ($.cookie('prices') || '').split(',');
+                let qtys = ($.cookie('qtys') || '').split(',');
                 let totalPrice = 0;
-                for (var i = 1; i < items.length; i++) {
-                    totalPrice = totalPrice + parseFloat(items[i]);
+                for (var i = 0; i < prices.length; i++) {
+                    for (var j = 0; j < qtys.length; j++) {
+                        totalPrice = totalPrice + prices[i] * qtys[j];
+                    }
                 }
                 $('span.cart-price').html(totalPrice + "₼");
             }
@@ -310,19 +265,6 @@
         });
     </script>
     @RenderSection("js", required: false)
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/6306afae37898912e964fd3b/1gb91sh0v';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-    </script>
-    <!--End of Tawk.to Script-->
 </body>
 
 
