--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Categories.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Categories.cshtml
@@ -37,102 +37,96 @@
                                 }
                             </ul>
                         </div>
-                        <div class="widget widget-collapsible">
-                            <h3 class="widget-title">Keyfiyyət</h3>
-                            <ul class="widget-body filter-items">
-                                @foreach (var item in Model.Types)
-                                {
-                                    <li><a href="#">@item.Name<span>(2)</span></a></li>
-                                }
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </aside>
             <div class="col-lg-9 main-content">
                 <div class="shop-banner-default banner mb-1"
-                     style="background-image: url('/assets/images/shop/banner.jpg'); background-color: #4e6582;">
+                     style="background-image: url('/assets/images/ujuj.jpg'); background-color: #4e6582;">
                     <div class="banner-content">
                         <h4 class="banner-subtitle font-weight-bold ls-normal text-uppercase text-white">
-                            Riode Shop
+                            Ecoparts
                         </h4>
-                        <h1 class="banner-title font-weight-bold text-white">Banner with Sidebar</h1>
-                        <a href="#" class="btn btn-white btn-outline btn-icon-right btn-rounded text-normal">
-                            Discover
-                            now<i class="d-icon-arrow-right"></i>
+                        <h1 class="banner-title font-weight-bold text-white">
+                            onlayn mağaza
+                        </h1>
+                        <a asp-action="basket" asp-controller="shop" class="btn btn-white btn-outline btn-icon-right btn-rounded text-normal">
+                            Səbət <i class="d-icon-arrow-right"></i>
                         </a>
                     </div>
                 </div>
-                <nav class="toolbox sticky-toolbox sticky-content fix-top">
-                    <div class="toolbox-left">
-                        <div class="toolbox-item toolbox-sort select-box">
-                            <label>Sort By :</label>
-                            <select name="orderby" class="form-control">
-                                <option value="default">Default</option>
-                                <option value="popularity" selected="selected">Most Popular</option>
-                                <option value="rating">Average rating</option>
-                                <option value="date">Latest</option>
-                                <option value="price-low">Sort forward price low</option>
-                                <option value="price-high">Sort forward price high</option>
-                                <option value="">Clear custom sort</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="toolbox-right">
-                        <div class="toolbox-item toolbox-show select-box">
-                            <label>Show :</label>
-                            <select name="count" class="form-control">
-                                <option value="12">12</option>
-                                <option value="24">24</option>
-                                <option value="36">36</option>
-                            </select>
-                        </div>
-                    </div>
-                </nav>
-                <div class="row cols-2 cols-sm-3 product-wrapper">
-                    @foreach (var item in Model.PagedViewModel.Items)
-                    {
-                        <div class="product-wrap">
-                            <div class="product text-center">
-                                <figure class="product-media">
-                                    <a asp-action="details" asp-route-id="@item.Id">
-                                        <img src="~/uploads/images/@item.ImagePath" alt="@item.Name" width="234"
-                                             height="259">
-                                    </a>
-                                    <div class="product-action-vertical">
-                                        <a href="#" data-item-id="@item.Id" onclick="addToWishlist(event)" class="btn-product-icon btn-wishlist" title="Add to wishlist"><i class="d-icon-heart"></i></a>
-                                    </div>
-                                </figure>
-                                <div class="product-details">
-                                    <div class="product-cat">
-                                        <a href="#">@item.Category.Name</a>
-                                    </div>
-                                    <h3 class="product-name">
-                                        <a asp-action="details" asp-route-id="@item.Id">@item.Name</a>
-                                    </h3>
-                                    <span style="color: #aaa;margin-left:0.5rem;font-size:14px;">@item.PartCodeName</span>
-                                    <div class="product-price">
-                                        @foreach (var price in Model.Pricings)
+                <div style="margin-top:25px;" class="row cols-12 cols-sm-12 product-wrapper">
+                    <table class="shop-table cart-table">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th><span>Adı</span></th>
+                                <th><span>Marka</span></th>
+                                <th><span>Kateqoriya</span></th>
+                                <th><span>Qiymət</span></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.PagedViewModel.Items)
+                            {
+                                <tr>
+                                    <td class="product-thumbnail">
+                                        <figure>
+                                            <a asp-action="details" asp-route-id="@item.Id">
+                                                <img src="~/uploads/images/@item.ImagePath" width="100" height="100" alt="@item.Name">
+                                            </a>
+                                        </figure>
+                                    </td>
+                                    <td class="product-name">
+                                        <div class="product-name-section">
+                                            <a asp-action="details" asp-route-id="@item.Id">@item.Name</a>
+                                            <p>@item.MainPartCodeName</p>
+                                        </div>
+                                    </td>
+                                    <td class="product-name">
+                                        <div class="product-name-section">
+                                            <a asp-action="details" asp-route-id="@item.Id">@item.Category.Brand.Name</a>
+                                        </div>
+                                    </td>
+                                    <td class="product-name">
+                                        <div class="product-name-section">
+                                            <a asp-action="details" asp-route-id="@item.Id">@item.Category.Name</a>
+                                        </div>
+                                    </td>
+                                    <td class="product-subtotal">
+                                        @foreach (var item1 in Model.Pricings)
                                         {
-                                            if (item.Id == price.ProductId)
+                                            if (item1.ProductId == item.Id)
                                             {
-                                                foreach (var type in Model.Types)
-                                                {
-                                                    if (type.Id == price.TypeId)
-                                                    {
-                                                        <a class="price" style="font-size:14px;">@price.Price&#8380;<span style="color: #aaa;margin-left:0.5rem;font-size:14px;">(@type.Name)</span></a>
-                                                    }
-                                                }
+                                                <span id="product-price-type" class="amount">@item1.Price</span><span>&#8380;</span>
                                             }
                                         }
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    }
+
+                                    </td>
+                                    <td class="d-flex flex-column product-quantity">
+                                        <div class="input-group">
+                                            <button class="quantity-minus d-icon-minus"></button>
+                                            <input class="quantity form-control" id="qty" type="number" min="1" max="1000000">
+                                            <button class="quantity-plus d-icon-plus"></button>
+                                        </div>
+                                        <button data-item-id="@item.Id" onclick="addToCart(event)" style="background-color: #26c;cursor:pointer;border:0px;border-radius:4px;padding:8px;margin-top:15px;color:white;"><i style="margin-right:7px;" class="fa-solid fa-basket-shopping"></i> Səbət</button>
+                                        <button data-item-id="@item.Id" onclick="addToWishlist(event)" style="background-color: red; cursor: pointer; border: 0px; border-radius: 4px; padding: 8px; margin-top: 3px; color: white;"><i class="fa-solid fa-heart"></i> Seçilmişlər</button>
+                                    </td>
+                                </tr>
+                            }
+
+                        </tbody>
+                    </table>
                 </div>
                 <nav class="toolbox toolbox-pagination mb-0 pb-0">
-                    <p class="show-info">Showing 1–@((Model.PagedViewModel.Items.Count() < 12) ? $"{Model.PagedViewModel.Items.Count()}" : "12") of @Model.PagedViewModel.Items.Count() Products</p>
+                    @if (@Model.PagedViewModel.Items.Count() == 0)
+                    {
+                        <p class="show-info">Məhsul yoxdur</p>
+                    }
+                    else
+                    {
+                        <p class="show-info">@Model.PagedViewModel.Items.Count() məhsuldan 1–@((Model.PagedViewModel.Items.Count() < 12) ? $"{Model.PagedViewModel.Items.Count()}" : "12") məhsul göstərilir</p>
+                    }
                     @Model.PagedViewModel.GetPagenation(Url, "Index")
                 </nav>
             </div>
@@ -172,6 +166,126 @@
                 },
                 error: function (response) {
                     toastr["error"]("Unsuccessfully", "Data has not been deleted")
+                }
+            })
+        }
+
+        function showWishlistCount() {
+            let items = readFromCookie();
+            $('.wishlist-count').html(items.length - 1);
+
+        }
+        showWishlistCount();
+
+    </script>
+    <script>
+        function addToCart(ev) {
+            ev.preventDefault();
+            ev.stopPropagation();
+            let data = $(ev.currentTarget).data();
+            let qty = $(ev.currentTarget).prev().find('#qty').val();
+            console.log(qty);
+            let price = $(ev.currentTarget).parent().prev().find('#product-price-type').html();
+            console.log(price);
+            //let qty = $(ev.currentTarget).closest('#qty').val();
+            if (qty < 1) {
+                $('.error').html("Miqdarı düzgün qeyd edin!");
+                return;
+            }
+            $('.error').html("");
+            addToBasket(data.itemId, price, qty);
+            console.log(readFromBasket());
+            showCardCount();
+        }
+        function readFromBasket() {
+            return ($.cookie('cards') || '').split(',');
+        }
+        function readFromBasketPrices() {
+            return ($.cookie('prices') || '').split(',');
+        }
+        function readFromBasketQty() {
+            return ($.cookie('qtys') || '').split(',');
+        }
+        function addToBasket(cardId, cardPrice, cardQty) {
+            let items = readFromBasket();
+            let prices = readFromBasketPrices();
+            let qtys = readFromBasketQty();
+            let length = items.filter(item => item == cardId).length;
+            let length1 = prices.filter(item => item == cardPrice).length;
+            if (length > 0 && length1 > 0) {
+                return;
+            }
+            items.push(cardId);
+            prices.push(cardPrice);
+            qtys.push(cardQty);
+            $.cookie('cards', items.toString(), { expires: 7, path: '/' });
+            $.cookie('prices', prices.toString(), { expires: 7, path: '/' });
+            $.cookie('qtys', qtys.toString(), { expires: 7, path: '/' });
+            $.ajax({
+                success: function (response) {
+                    if (response.error == true) {
+                        toastr.error(response.message, "Error!");
+                        return;
+                    }
+                    toastr.success("Səbətə uğurla əlavə edildi", response.message)
+                    showCardCount();
+                    showCartPrice();
+                },
+                error: function (response) {
+                    toastr["error"]("Uğursuz", "Əlavə edilmədi")
+                }
+            })
+        }
+
+        function showCardCount() {
+            let items = readFromBasket();
+            $('span.cart-count').html(items.length - 1);
+
+        }
+        showCardCount();
+        function showCartPrice() {
+
+            let prices = ($.cookie('prices') || '').split(',');
+            let qtys = ($.cookie('qtys') || '').split(',');
+            let totalPrice = 0;
+            for (var i = 0; i < prices.length; i++) {
+                for (var j = 0; j < qtys.length; j++) {
+                    totalPrice = totalPrice + prices[i] * qtys[j];
+                }
+            }
+            $('span.cart-price').html(totalPrice + "₼");
+        }
+        showCartPrice();
+    </script>
+    <script>
+        function addToWishlist(ev) {
+            ev.preventDefault();
+            ev.stopPropagation();
+            let data = $(ev.currentTarget).data();
+            addToCookie(data.itemId);
+
+            console.log(readFromCookie())
+        }
+        function readFromCookie() {
+            return ($.cookie('cardsForWishlist') || '').split(',');
+        }
+        function addToCookie(cardId) {
+            let items = readFromCookie();
+            let length = items.filter(item => item == cardId).length;
+            if (length > 0) return;
+            items.push(cardId);
+            $.cookie('cardsForWishlist', items.toString(), { expires: 7, path: '/' });
+            $.ajax({
+                success: function (response) {
+                    if (response.error == true) {
+                        toastr.error(response.message, "Error!");
+                        return;
+                    }
+                    toastr.success("Seçilmişlərə uğurla əlavə edildi", response.message)
+                    showWishlistCount();
+                },
+                error: function (response) {
+                    toastr["error"]("Uğursuz", "Əlavə edilmədi")
                 }
             })
         }
